# buddies-ai

./: .gitattributes  .rustfml.toml  Cargo.toml  LICENSE  Readme.md  rust-toolchain.toml
.devcontainer/: devcontainer.json
examples/create_website/: .env.template  Cargo.toml  buddies.yaml
examples/create_website/src/: main.rs
lib/: Cargo.toml
lib/src/: job.rs  lib.rs  settings.rs
